--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Bajaj-OA
+# API Endpoints
+api.url.generate-webhook=https://bfhldevapigw.healthrx.co.in/hiring/generateWebhook/JAVA
+
+user.name=John Doe
+user.regNo=REG12347 
+user.email=john@example.com
